--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <h2>Omar's Introduction</h2>
   <div class="video-container">
     <iframe 
-      src="https://youtu.be/QSFV1fQ1Wco" 
+      src="https://www.youtube.com/embed/QSFV1fQ1Wco" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
