--- a/index.html
+++ b/index.html
@@ -34,17 +34,13 @@
 <section id="about" class="content-section">
   <h2>About Me</h2>
   <p>I'm Omar, a high school senior who spends every spare moment learning more about the universe. I hope to study computer science or physics in college, and eventually contribute to innovative research that helps us better understand nature and ourselves.</p>
-</section>
-
-<section id="intro-video">
-  <h2>Omar's Introduction</h2>
+  <!-- Author's Introduction Video -->
   <div class="video-container">
     <iframe 
       src="https://www.youtube.com/embed/QSFV1fQ1Wco" 
       frameborder="0" 
       allowfullscreen>
     </iframe>
-  </div>
 </section>
 
 <section id="projects" class="content-section">
