--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Omar Hernández | Science, Space & Technology Explorer</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet" />
+  <!-- Devicon for Programming Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 <body>
   <header>
@@ -31,37 +33,53 @@
     </div>
   </main>
 
-<section id="about" class="content-section">
-  <h2>About Me</h2>
-  <p>I'm Omar, a high school senior who spends every spare moment learning more about the universe. I hope to study computer science or physics in college, and eventually contribute to innovative research that helps us better understand nature and ourselves.</p>
-  <!-- Author's Introduction Video -->
-  <div class="video-container">
-    <iframe 
-      src="https://www.youtube.com/embed/QSFV1fQ1Wco" 
-      frameborder="0" 
-      allowfullscreen>
-    </iframe>
-</section>
+  <!-- About Section -->
+  <section id="about" class="content-section">
+    <h2>About Me</h2>
+    <p>I'm Omar, a high school senior who spends every spare moment learning more about the universe. I hope to study computer science or physics in college, and eventually contribute to innovative research that helps us better understand nature and ourselves.</p>
+    
+    <!-- Programming Languages -->
+    <div class="skills">
+      <h3>Programming Languages</h3>
+      <div class="skills-icons">
+        <i class="devicon-python-plain colored"></i>
+        <i class="devicon-c-plain colored"></i>
+        <i class="devicon-cplusplus-plain colored"></i>
+      </div>
+    </div>
 
-<section id="projects" class="content-section">
-  <h2>Projects</h2>
-  <ul class="project-list">
-    <li><strong>Planetary Orbit Simulator:</strong> A Python project that models elliptical planetary orbits using Kepler’s laws and gravitational physics. It includes visual simulations to explore how planets move around the Sun and teaches how math, physics, and code come together to model real-world systems.</li>
-  </ul>
-</section>
+    <!-- Author's Introduction Video -->
+    <div class="video-container">
+      <iframe 
+        src="https://www.youtube.com/embed/QSFV1fQ1Wco" 
+        frameborder="0" 
+        allowfullscreen>
+      </iframe>
+    </div>
+  </section>
 
-<section id="blog" class="content-section">
-  <h2>Blog</h2>
-  <p>Here you'll find reflections, short essays, and thoughts on topics I’m exploring — from black holes to quantum computing, from the history of space travel to the ethics of AI.</p>
-  <p><em>Sample blog posts coming soon...</em></p>
-</section>
+  <!-- Projects Section -->
+  <section id="projects" class="content-section">
+    <h2>Projects</h2>
+    <ul class="project-list">
+      <li><strong>Planetary Orbit Simulator:</strong> A Python project that models elliptical planetary orbits using Kepler’s laws and gravitational physics. It includes visual simulations to explore how planets move around the Sun and teaches how math, physics, and code come together to model real-world systems.</li>
+    </ul>
+  </section>
 
-<section id="contact" class="content-section">
-  <h2>Contact</h2>
-  <p>If you'd like to connect, collaborate, or just say hi, feel free to reach out!</p>
-  <p>Email: <a href="mailto:omar@example.com">omar@example.com</a></p>
-  <p>More links (GitHub, LinkedIn, etc.) coming soon.</p>
-</section>
+  <!-- Blog Section -->
+  <section id="blog" class="content-section">
+    <h2>Blog</h2>
+    <p>Here you'll find reflections, short essays, and thoughts on topics I’m exploring — from black holes to quantum computing, from the history of space travel to the ethics of AI.</p>
+    <p><em>Sample blog posts coming soon...</em></p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="content-section">
+    <h2>Contact</h2>
+    <p>If you'd like to connect, collaborate, or just say hi, feel free to reach out!</p>
+    <p>Email: <a href="mailto:omar@example.com">omar@example.com</a></p>
+    <p>GitHub: <a href="https://github.com/omiher08" target="_blank">github.com/omiher08</a></p>
+  </section>
 
   <footer>
     <p>&copy; 2025 Omar Hernández. All rights reserved.</p>
