--- a/index.html
+++ b/index.html
@@ -37,16 +37,6 @@
   <section id="about" class="content-section">
     <h2>About Me</h2>
     <p>I'm Omar, a high school senior who spends every spare moment learning more about the universe. I hope to study computer science or physics in college, and eventually contribute to innovative research that helps us better understand nature and ourselves.</p>
-    
-    <!-- Programming Languages -->
-    <div class="skills">
-      <h3>Programming Languages</h3>
-      <div class="skills-icons">
-        <i class="devicon-python-plain colored"></i>
-        <i class="devicon-c-plain colored"></i>
-        <i class="devicon-cplusplus-plain colored"></i>
-      </div>
-    </div>
 
     <!-- Author's Introduction Video -->
     <div class="video-container">
@@ -57,6 +47,16 @@
       </iframe>
     </div>
   </section>
+
+      <!-- Programming Languages -->
+    <div class="skills">
+      <h3>Programming Languages I know</h3>
+      <div class="skills-icons">
+        <i class="devicon-python-plain colored"></i>
+        <i class="devicon-c-plain colored"></i>
+        <i class="devicon-cplusplus-plain colored"></i>
+      </div>
+    </div>
 
   <!-- Projects Section -->
   <section id="projects" class="content-section">
@@ -79,6 +79,7 @@
     <p>If you'd like to connect, collaborate, or just say hi, feel free to reach out!</p>
     <p>Email: <a href="mailto:omar@example.com">omar@example.com</a></p>
     <p>GitHub: <a href="https://github.com/omiher08" target="_blank">github.com/omiher08</a></p>
+    <p>Other links available later...</p>
   </section>
 
   <footer>
