--- a/index.html
+++ b/index.html
@@ -67,30 +67,17 @@
   </section>
 
   <!-- Blog Section -->
-  <section id="blog" class="py-16 bg-gray-50">
-    <div class="container mx-auto px-6">
-      <h2 class="text-3xl font-bold mb-8 text-center">Blog</h2>
-      
-      <!-- Blog Entry -->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <div class="bg-white rounded-2xl shadow-md p-6 flex flex-col justify-between">
-          <div>
-            <h3 class="text-xl font-semibold mb-3">Exploring Orbits: My Geometry & Physics Project</h3>
-            <p class="text-gray-600 mb-4">
-              For this project, I combined my knowledge of ellipses from geometry with Kepler’s laws and physics. 
-              I worked on modeling the Earth’s orbit using equations and then created a Python program to graph 
-              the ellipse. It helped me understand how math and science connect to explain real-world phenomena.
-            </p>
-          </div>
-          <div>
-            <button 
-              class="mt-4 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition"
-              onclick="alert('This is just a test blog entry. The full article is not available yet.')"
-            >
-              See more
-            </button>
-          </div>
-        </div>
+  <section id="blog" class="content-section">
+    <h2>Blog</h2>
+    <p>Here you'll find reflections, short essays, and thoughts on topics I’m exploring — from black holes to quantum computing, from the history of space travel to the ethics of AI.</p>
+    <p><em>Sample blog posts coming soon...</em></p>
+  
+    <!-- Blog Entries -->
+    <div class="blog-entries">
+      <div class="blog-card">
+        <h3>Exploring Orbits: My Physics Project</h3>
+        <p>This project dives into the fascinating world of orbital mechanics — how planets and satellites move through space. I modeled different orbital paths and visualized the results.</p>
+        <a href="#" class="btn">See more</a>
       </div>
     </div>
   </section>
